--- a/theory.tex
+++ b/theory.tex
@@ -701,7 +701,7 @@ This result
 %of the light envelope propagating with the group velocity \textit{from} the second medium \textit{towards} the interface may seem unphysical, 
 may however be explained by a strong deformation of the envelope shape on a short distance. %, which ensures the information carried by the wave modulation to propagate causally, out from the source, and always with speed lower or equal to the speed of light in vacuum $c$.
 
-A negative group velocity has been experimentally observed in a thin sample. It manifested itself as a negative shift of the light envelope center-of-mass compared to the absence of the medium \cite{dolling2006simultaneous}. Note that the negative group velocity is independent of the sign of the phase velocity, which may be both positive and negative \cite{mikki2009electromagnetic}.
+A negative group velocity has been experimentally observed in a thin sample. It manifested itself as a negative shift of the light envelope center-of-mass \cite{dolling2006simultaneous},  compared to the absence of the medium. Note that the negative group velocity is independent of the sign of the phase velocity, which may be both positive and negative \cite{mikki2009electromagnetic}. 
 
 %}}}
 \paragraph{Signal velocity}%{{{
