--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,31 +1,19 @@
-.. key originalities with respect to the state of the art in this field
-
-%% what should Conclusion contain:
-% [ ] overall analysis and integration of the research and conclusions of the thesis in
-%     light of current research in the field
-% [ ] conclusions regarding goals or hypotheses of the thesis that were presented in
-%     the Introduction, and the overall significance and contribution of the thesis
-%     research
-% [ ] comments on strengths and limitations of the thesis research
-% [ ] discussion of any potential applications of the research findings
-% [ ] an analysis of possible future research directions in the field drawing on the work
-%     of the thesis
+%.. key originalities with respect to the state of the art in this field
 
 
-% 1  emphasize the importance of spatial-dispersive electrodynamics
-%spatially-dispersive media, that is, to account for the material properties depending not only on the frequency, but also on the magnitude of the wave vector.
 % 4  note that, although many successes have been achieved, all metamaterial application still suffer from fundamental issues as excessive losses and anisotropy
 %	 and on the example of dielectric rods, show that it probably can not be overcome without a significant breakthrough
 
 %%% Hole : Conclusion - what to put here?
 %% NOTES: What WAS discussed in the thesis and is special:
-%  * aims to present an accessible introduction to the electrodynamics of periodic structures. 
-%  * historical notes 
+%  * THEORY aims to present an accessible introduction to the electrodynamics of periodic structures. 
+%		... to account for the material properties depending not only on the frequency, but also on the magnitude of the wave vector.
+%  * THEORY historical notes 
 % 	(the base line is that many concepts are not as novel as they may appear, and that modern papers
 %	often fail to cite the author of the original idea)
 %    historical review suggests formal unification of MM and PhC concepts, attempt for clarification of these two terms
 %	 ... which is also illustrated by the numerous recent publications on the rod array, which lies at the boundary between MM and PhC
-%  * filled the demand for some starting overview of the common structures, in a level of detail and
+%  * RESULTS filled the demand for some starting overview of the common structures, in a level of detail and
 %    didactic approach that the author felt to be missing in the available literature. This required significantly more involvement
 %	 than originally envisaged in the PhD project. 
 %	- attempt to compare most metamaterial structures
