--- a/result.tex
+++ b/result.tex
@@ -1038,7 +1038,7 @@ The upper frequency limit in the plots was determined by the onset of the first 
 \end{figure}
 %}}}
 \paragraph{Wood's anomaly near the diffraction edge} %{{{
-At a frequency slightly below the onset of diffraction, a relatively narrow notch in the reflectance spectrum is observed. The frequency where $|r|$ drops close to zero depends on the slab thickness $d_z$ -- which will be shown later -- and on the slit width $d_x$. In the above figures where $d_z$ was fixed at $20$ $\upmu$m, the lowest frequency of the notch around $2.8$ THz is reached for $d_x/a_x \sim 0.3$ (see Fig. \ref{fg_yslit_xscan}a). 
+At a frequency slightly below the onset of diffraction, a relatively narrow notch in the reflectance spectrum is observed. The frequency where $|r|$ drops near zero depends on the slab thickness $d_z$ -- which will be shown later -- and on the slit width $d_x$. In the above figures where $d_z$ was fixed at $20$ $\upmu$m, the lowest frequency of the notch around $2.8$ THz is reached for $d_x/a_x \sim 0.3$ (see Fig. \ref{fg_yslit_xscan}a). 
 
 For a narrower or wider slit, the frequency of the notch increases and eventually approaches the diffraction limit of $3.0$ THz. 
 The notch also becomes narrower in spectrum, but does not appreciably reduce its depth. Some frequency can always be found at which nearly 100 \% of the energy is transmitted through the structure.
@@ -1098,11 +1098,11 @@ In the upper right corner of Fig. \ref{fg_yslit_dscan}a, a second zero-reflectan
 
 %}}}
 \paragraph{Effective parameters of sheet-slit array}%{{{
-Previous paragraphs described the reflection and transmission of a single layer. Multiple layers can be arranged into an infinite stack with a given unit cell size $a_z$ along the wave propagation, and their effective parameters can be computed as with other metamaterials. However, due attention must be paid to whether the conventional scattering parameter method gives correct results, since the structure has strong coupling between the neighbouring cells. A great portion of the resonant energy is carried by the surface plasmons that were shown not to be well localized and can easily couple with those on nearby metallic surfaces, forming slot-waveguide modes \cite{weiner2011electromagnetics}.
+Previous paragraphs described the reflection and transmission of a single layer. Multiple layers can be arranged into an infinite stack with a given unit cell size $a_z$ along the wave propagation, and their effective parameters can be computed as with other metamaterials. However, due attention must be paid to whether the conventional scattering parameter method gives correct results, since the structure has strong coupling between the neighbouring cells. A great portion of the resonant energy is transferred by the surface plasmons that were shown not to be well localized and can easily couple with those on nearby metallic surfaces, forming slot-waveguide modes \cite{weiner2011electromagnetics}.
 
-On the contrary, the current-driven homogenisation setup simulates one unit cell in an exact periodic environment of other cells, and is fully  suitable even for structures with strong coupling of neighbouring cells. The representative comparison of results for a  is in Fig. \ref{fg_cdh_yslit}a, with the accurate CDH dispersion curves indicated by points, and the s-parameter results overlaid as green curves. 
+On the contrary, the current-driven homogenisation (CDH) setup simulates one unit cell in an exact periodic environment of other cells, and is fully  suitable even for structures with strong coupling of neighbouring cells. The representative comparison of the results is in Fig. \ref{fg_cdh_yslit}a, with the accurate CDH dispersion curves indicated by points, and the s-parameter results overlaid as green curves. 
 
-The first 
+The first photonic band is obviously accurately matched by both simulation setups. In the second band, located close to the diffraction edge where the dispersion is determined by excitation of surface plasmons, the scattering parameter method completely fails to predict not only its exact shape, but even the sign of the group velocity. 
 
 %TODO  discuss CDH results for Yslits of different cell spacing: 
 % TODO \ref{fg_cdh_yslit}a -- add about convergence of s-param method
@@ -1201,7 +1201,7 @@ The s-parameter method computes the same metallic structure, and only the phase 
 % \cite{yahiaoui2012metallo,rockstuhl2008light}
 
 \paragraph{Extraordinary transmission}
-A natural modification of the structure discussed  above is to add conductive connections between the metallic stripes, forming a perforated metallic sheet which is also denoted as a \textit{mesh}, or within a context of metamaterials, a \textit{fishnet} or \textit{sub-wavelength hole array}. 
+A natural modification of the structure discussed  above is to add conductive connections between the metallic stripes, forming a perforated metallic sheet which is often denoted as a \textit{mesh} in the literature, or within the context of metamaterials, as a \textit{fishnet} or a \textit{sub-wavelength hole array}. 
 
 Already in 1950s the perforated sheets were proposed to be periodically arranged to form an artificial dielectric \cite[p. 58]{brown1953artificial} with index of refraction lower than 1, but the field was supposed to propagate parallel to the slabs.  % thus not exhibiting the resonant phenomena http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
 The spectral selectivity of a metallic mesh perpendicular to the wave vector was employed in 1960s as a microwave and far-infrared filter \cite{ulrich1967effective,ulrich1967far, vogel1964transmission}.  %% TODO rewrite historical, connect with slits?
