--- a/theory.tex
+++ b/theory.tex
@@ -511,7 +511,7 @@ then Eq. (\ref{eq_me4}) maintains exactly the same form with the new fields, for
 because for reasonably shaped functions the temporal and spatial derivatives commute.
 
 %% todo how this transform is denoted?
-With the freedom of choice of $\mathbf{X}$, we impose the above mentioned requirement that whole magnetic response of the matter is expressed by the constitutive equation for permittivity. Therefore in spatial-dispersive theory, the constitutive equation 
+With the \textit{gauge freedom} of choice of $\mathbf{X}$, we impose the above mentioned requirement that whole magnetic response of the matter is expressed by the constitutive equation for permittivity. Therefore in spatially dispersive theory, the constitutive equation 
 for magnetic induction is defined the same as in vacuum, c.f. Eq. (\ref{eq_ce}):
 \begin{equation} \mu_0 \HHsd := \mu_0 \murl(\omega) \HH = \B. \label{eq_mu_sd}\end{equation}
 When this equation is rearranged into the form similar to \ref{eq_HHsd}, we obtain a prescription for the sought $\mathbf{X}$: 
@@ -547,9 +547,9 @@ where we make use of the wavefront projection tensor defined as
 
 %}}}
 \paragraph{Other formulations}%{{{
-Let us note that the classical approach using symmetric parameters $\epsrl(\omega,\kk),\murl(\omega,\kk)$, and the Landau-Lifshitz approach of gathering all medium-related effects in the permittivity $\epsLL(\omega,\kk)$ are only two examples of all possible transformations of medium parameters that keep the Maxwell equations unchanged. 
+Let us note that the classical approach using symmetric parameters $\epsrl(\omega,\kk),\murl(\omega,\kk)$, and the Landau-Lifshitz approach of gathering all medium-related effects in the permittivity $\epsLL(\omega,\kk)$ are only two examples of all possible gauge transformations of medium parameters under which the Maxwell equations are invariant. 
 
-Formally, it is possible to arbitrarily distribute the medium electric and magnetic responses between these parameters. The distribution weight may be even frequency dependent, leading to a physically realistic pair of parameters with custom spectral shape \cite{skaar2014diamagnetism}.
+Formally, one can distribute the medium electric and magnetic responses between these parameters arbitrarily -- the distribution weight may be even frequency dependent, leading to a physically realistic pair of parameters with custom spectral shape \cite{skaar2014diamagnetism}.
 % maybe "Casimir" formulation of electrodynamics \cite{vinogradov2002form}
 % TODO REF EBD theory and nonlocal electrodynamics %% \cite{krowne2007book_agran} %% \cite{landau1984electrodynamics} %% \cite{mikki2009electromagnetic}
 %}}}
